--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -121,6 +121,12 @@ config BATTERY_BQ27x00
 	help
 	  Say Y here to enable support for batteries with BQ27x00 (I2C) chips.
 
+config BATTERY_BQ27200
+	tristate "Liquidware ItaniumPack battery driver"
+	depends on I2C
+	help
+	  Say Y here to enable support for batteries with BQ27200(I2C) chip.
+
 config BATTERY_DA9030
 	tristate "DA9030 battery driver"
 	depends on PMIC_DA903X
