--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -121,11 +121,12 @@ config BATTERY_BQ27x00
 	help
 	  Say Y here to enable support for batteries with BQ27x00 (I2C) chips.
 
-config BATTERY_BQ27200
-	tristate "Liquidware ItaniumPack battery driver"
+config BATTERY_ITANIUMPACK
+	bool "Liquidware ItaniumPack support"
 	depends on I2C
+	default y
 	help
-	  Say Y here to enable support for batteries with BQ27200(I2C) chip.
+	  Say Y here to enable support for Liquidware ItaniumPack compatible batteries.
 
 config BATTERY_DA9030
 	tristate "DA9030 battery driver"
